# Anomaly-Detector

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  README.md  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle.cpp  minCircle.h  testFile1.csv  timeseries.cpp  timeseries.h  trainFile1.csv
